# This version tag is used in building "cvstag.h" for version identification.

BRANCH CHECKLIST: code review TODO/FIXME through all prsim code!

2008-10-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-13:
	  Fixed bug with propagating wrong pull-state to root, as returned
		by ::evaluate(), fixing a few tests with unstable-dequeue.


2008-10-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-12+:
	  Fixed formatting of State::__root_why analysis.  
	  Known bug remaining: some tests outputs have dropped subtrees
		of why-analysis, a few unstable diagnostics differ, 
		see test/prsim/prsimrcdiffs.


2008-10-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-12:
	  prsim: fix get_delay_up/dn assertion, but would still like to
		automatically find the appropriate delay based on fanin-get
		eventually, however this is low priority.
		No regression tests crash anymore!
		Only differences seem to be in fanin/fanout printing
		and why-analysis feedback (68 test failures).


2008-10-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-11+:
	  More fixes: faulty rule index returned (bad lookup), 
		bad fanin/fanout printing fixed.
	  Next bug: get_delay fails when no valid rule_index is provided, 
		so must search for an ON rule, and take minimum delay.
		This causes many remaining crashes, e.g. State::unset_node().


2008-10-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-11:
	  Tons of simple little bugs fixed, still much more to go.
		Many easy bugs related to incorrect assertions due to
		local indexing vs. global indexing.  
	  Most regression tests in prsim/ still die on 
		crashes and assert fails.  


2008-10-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-10:
	  Ton of minor fixes during debugging, successfully simulated